<resources>
    <string name="app_name">Store</string>

    <string name="title_category_bottom_navigation">دسته بندی</string>
    <string name="title_profile_bottom_navigation">کاربری</string>
    <string name="title_home_items_bottom_navigation">خانه</string>
    <string name="title_cart_bottom_navigation">سبد خرید</string>
    <string name="price_format">%s تومان</string>
    <string name="description_format">توضیحات: \n %s</string>
    <string name="see_all">مشاهده همه</string>
    <string name="enter_the_first_name">نام خود را وارد کنید</string>
    <string name="sign_in">ثبت نام</string>
    <string name="enter_the_last_name">نام خانوادگی خود را وارد کنید</string>
    <string name="enter_the_email">ایمیل خود را وارد کنید</string>
    <string name="enter_the_user_name">نام کاربری خود را وارد کنید</string>
    <string name="i_already_have_an_account">ورود به حساب کاربری</string>
    <string name="login">حساب کاربری</string>
    <string name="enter">ورود</string>
    <string name="i_have_no_account">ثبت نام</string>
    <string name="no_connection">اتصال برقرار نیست</string>
    <string name="connected">اتصال برقرار شد</string>
    <string name="retry">تلاش مجدد</string>
    <string name="best">بهترین</string>
    <string name="favourite">محبوب ترین</string>
    <string name="latest">جدیدترین</string>
    <string name="search_box">جست و جو در استور</string>
    <string name="invalid_email">ایمیل شما نامعتبر است.</string>
    <string name="invalid_user_name_and_email">ایمیل یا نام کاربری شما نامعتبر است.</string>
    <string name="title_info">اطلاعات شخصی</string>
    <string name="exit">خروج از حساب کاربری</string>
    <string name="enter_the_name">نام و نام خانوادگی خود را وارد کنید.</string>
    <string name="name">نام</string>
    <string name="submit_info">تایید اطلاعات</string>
    <string name="last_name">نام خانوادگی</string>
    <string name="are_you_sure">آیا مطمئن هستید؟</string>
    <string name="yes">بله</string>
    <string name="add_to_card">افزودن به سبد خرید</string>
    <string name="see_cart">مشاهده سبد خرید</string>
    <string name="category">دسته بندی</string>
    <string name="price">قیمت</string>
    <string name="submit_filter">اعمال فیلتر</string>
    <string name="added_to_cart">به سبد خرید اضافه شد.</string>
    <string name="empty_cart">سبد خرید شما خالی است.</string>
    <string name="new_product_avail">محصول جدید رسید.</string>
    <string name="click">کلیک کن!</string>
    <string name="reviews">دیدگاه کاربران</string>
    <string name="add_review">افزودن نظر</string>
    <string name="enter_review">دیدگاه خود را بنویسید</string>
    <string name="submit">تایید</string>
    <string name="rating">نمره</string>
    <string name="review_added">نظر شما ثبت شد.</string>
    <string name="it_is_problem">مشکلی پیش آمده.</string>
    <string name="final_order">نهایی کردن سفارش</string>
    <string name="enter_coupon">کد تخفیف خود را وارد کنید.</string>
    <string name="submit_coupon">اعمال کد تخفیف</string>
    <string name="pay">پرداخت</string>
    <string name="used_code">این کد استفاده شده است.</string>
    <string name="incorrect_code">کد صحیح نیست.</string>

</resources>