<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/home_search_card_view"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:elevation="@dimen/elevation_size"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:backgroundTint="#ccc"
            app:cardCornerRadius="20dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/search_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_baseline_search_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/search_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/search_box"
                    android:textSize="25sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/search_iv"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/home_search_card_view">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_home_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_sv">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/special_offers_vp"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title_best_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/best"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/special_offers_vp" />

            <TextView
                android:id="@+id/see_all_best_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/see_all"
                android:textSize="20sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="@+id/title_best_home"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/title_best_home" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/best_product_rc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/title_best_home" />


            <TextView
                android:id="@+id/title_favourite_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favourite"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/best_product_rc" />

            <TextView
                android:id="@+id/see_all_favourite_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/see_all"
                android:textSize="20sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="@+id/title_favourite_home"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/title_favourite_home" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/favourite_product_rc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/title_favourite_home" />

            <TextView
                android:id="@+id/title_latest_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latest"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/favourite_product_rc" />

            <TextView
                android:id="@+id/see_all_latest_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/see_all"
                android:textSize="20sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="@+id/title_latest_home"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/title_latest_home" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/latest_product_rc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/title_latest_home" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>